# agentplug

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
.gm/exec-spool/in/codesearch/: 1.txt
crates/agentplug-host/: Cargo.toml
crates/agentplug-host/src/: browser.rs  cdp_eval.js  exec_js.rs  host_state.rs  imports.rs  install.rs  lib.rs  registry.rs  task.rs
crates/agentplug-runner/: Cargo.toml
crates/agentplug-runner/src/: daemon.rs  download.rs  main.rs
docs/: ABI.md
