[package]
name = "agentplug-host"
version.workspace = true
edition.workspace = true

[lib]
name = "agentplug_host"
path = "src/lib.rs"

[dependencies]
wasmtime = { version = "46", features = ["cache"] }
wasmtime-wasi = "46"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
ureq = { version = "2", features = ["tls"] }
wait-timeout = "0.2"
