[package]
name = "agentplug-runner"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentplug-runner"
path = "src/main.rs"

[dependencies]
agentplug-host = { path = "../agentplug-host" }
wasmtime = { version = "46", features = ["cache"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
ureq = { version = "2", features = ["tls"] }
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
